Improves GitHub repository download security
Enhances the GitHub repository download functionality
by implementing URL validation to prevent arbitrary
URL access. Extracts owner and repository name from
the URL for safer ZIP URL construction. Uses URI
instead of URL for more secure URL handling.